# react/src/js/http/ContactApi.ts
@@ -1,4 +1,5 @@
 import {HttpService} from "../common/services/HttpService";
+import {ChangeParentRequest} from "../model/checkout/ChangeParentRequest";
 import {ConcessionsAndMemberships} from "../model/checkout/ConcessionsAndMemberships";
 import {CreateParentChildrenRequest} from "../model/checkout/CreateParentChildrenRequest";
 import {Concession} from "../model/checkout/concession/Concession";
@@ -16,6 +17,9 @@ export class ContactApi {
   constructor(private http: HttpService) {
   }
 
+  changeParent(request: ChangeParentRequest): Promise<any> {
+    return this.http.PUT(`/changeParent`, request);
+  }
   createOrGetContact(createContactParams: CreateContactParams): Promise<ContactId> {
     return this.http.PUT(`/contact`, createContactParams);
   }
