# react/src/js/model/checkout/ChangeParentRequest.ts
@@ -1,0 +1,6 @@
+
+export class ChangeParentRequest {
+  parentId?: string;
+  childId?: string;
+}
+
