# willow-api/api/src/main/groovy/ish/oncourse/willow/service/ContactApi.java
@@ -1,6 +1,7 @@
 package ish.oncourse.willow.service;
 
 import java.util.List;
+import ish.oncourse.willow.model.checkout.ChangeParentRequest;
 import ish.oncourse.willow.model.checkout.ConcessionsAndMemberships;
 import ish.oncourse.willow.model.checkout.CreateParentChildrenRequest;
 import ish.oncourse.willow.model.checkout.concession.Concession;
@@ -24,6 +25,13 @@ import javax.ws.rs.core.MediaType;
 
 @Path("/")
 public interface ContactApi  {
+
+    @PUT
+    @Path("/changeParent")
+    @Consumes({ "application/json" })
+    @Produces({ "application/json" })
+    @CollegeInfo
+    void changeParent(ChangeParentRequest request);
 
     @PUT
     @Path("/contact")
